stuf/src/p6/tests/t018.err
Semantic error on line 5: Redeclaration of symbol trouble as animation_block.
